fix: add thin-scrollbars back to sidebars

--- a/packages/ui/core/src/assets/scss/horizontal-sidebar-separator.scss
+++ b/packages/ui/core/src/assets/scss/horizontal-sidebar-separator.scss
@@ -6,23 +6,13 @@ $minHeightOfSections: 55px;
   min-height: $minHeightOfSections;
   height: calc(50% - 29px);
   max-height: calc(100% - $minHeightOfSections);
-  overflow-y: scroll;
-  scrollbar-width: thin;
-  &::-webkit-scrollbar {
-    width: 4px;
-  }
+
 }
 
 .bottom-resizer-section {
   margin-top: 10px;
   min-height: $minHeightOfSections;
   max-height: calc(50% + 11px);
-  overflow-y: scroll;
-  scrollbar-width: thin;
-
-  &::-webkit-scrollbar {
-    width: 4px;
-  }
 }
 
 .resizer-area {
